2002-02-08  Federico Mena Quintero  <federico@ximian.com>

	* pixops/pixops.h: Fix comment; PixopsInterpType -> GdkInterpType.

2002-02-08  Darin Adler  <darin@bentspoon.com>

	* io-xbm.c: (next_int): Wean this from <ctype.h>.

2002-02-01  Matthias Clasen  <matthiasc@poet.de>

	* Makefile.am: Build the tga loader as a static library. (#70157)

	* io-ico.c: Merge 16- and 32-bit ico support from the stable 
	branch.  (#61179)

	* io-gif.c: Recomposite all images if the animation size changes
	while loading.  (#70055)

	* gdk-pixbuf.c (gdk-pixbuf-fill): Make it work for subpixbufs. 
	(#70055)

Sat Jan 19 20:49:20 2002  Manish Singh  <yosh@gimp.org>

	* io-jpeg.c, io-png.c: Made sure all the error cases involving
	jpeg or png load/saves clean themselves up properly. Marked some
	variables needed for cleanup volatile so they aren't clobbered by
	setjmp.

Fri Jan 11 18:05:07 2002  Owen Taylor  <otaylor@redhat.com>

	* pixops/pixops.c: Fix integer overflow for the values
	passed to the pixel functions. (#55148, fix from Michael Hore)

Fri Jan 11 17:53:58 2002  Owen Taylor  <otaylor@redhat.com>

	* pixops/pixops.c (pixops_scale_nearest): Remove meaningless
	FIXME.

	* pixops/pixops.c (pixops_process): Comment the computation
	of run_end_index and fix some edge cases.

	* pixops/{scale_line_22_33_mmx.S, composite_line_22_4a4_mmx.S:
	composite_line_color_22_4a4_mmx.S}: Handle the case where
	dest <= dest_end properly. (#52001, fix from Michael Hore)

Thu Jan 10 16:48:30 2002  Owen Taylor  <otaylor@redhat.com>

	* pixops/pixops.c: Replace some	hardcoded values with the 
	SUBSAMPLE constant used elsewhere. (#51033)

Wed Jan  9 11:29:44 2002  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (s-enum-types-h): Include glib-object.h,
	Add G_BEGIN_DECLS/END_DECLS to gdk-pixbuf-enum-types.h. (#68325,
	Mikael Hermansson)

	* *.h: G_BEGIN_DECLS cleanups.

Tue Jan  8 10:58:04 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk-pixbuf-util.c (gdk_pixbuf_saturate_and_pixelate): 